--- a/package.json
+++ b/package.json
@@ -10,14 +10,31 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "framer-motion": "^8.4.7",
+    "gsap": "^3.11.4",
+    "konva": "^8.4.3",
+    "locomotive-scroll": "^4.1.4",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-konva": "^18.2.5",
+    "react-konva-utils": "^0.3.2",
+    "react-locomotive-scroll": "^0.2.2",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "resize-observer-polyfill": "^1.5.1",
+    "typescript": "4.9.4",
+    "use-image": "^1.1.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
